--- a/AuthService/package.json
+++ b/AuthService/package.json
@@ -9,8 +9,10 @@
   "author": "Fabian Desnoes",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1"
   }
 }
